rolling out ng build within terraform

--- a/modules/website/beaconApp/angular.json
+++ b/modules/website/beaconApp/angular.json
@@ -25,8 +25,7 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/styles.css",
-              "./node_modules/bootstrap/dist/css/bootstrap.css"
+              "src/styles.css"
             ],
             "scripts": []
           },
