environment variables added

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 .idea
 .terraform
 __pycache__/
+modules/website/beaconApp/src/environments/environment.ts
+modules/website/beaconApp/src/environments/environment.prod.ts
