--- a/modules/website/beaconApp/package.json
+++ b/modules/website/beaconApp/package.json
@@ -11,48 +11,50 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.14",
-    "@angular/cdk": "~8.2.3",
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/forms": "~8.2.14",
-    "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
-    "@ng-bootstrap/ng-bootstrap": "^5.3.1",
+    "@angular/animations": "12.2.7",
+    "@angular/cdk": "8.2.3",
+    "@angular/common": "12.2.7",
+    "@angular/compiler": "12.2.7",
+    "@angular/core": "12.2.7",
+    "@angular/forms": "12.2.7",
+    "@angular/material": "8.2.3",
+    "@angular/platform-browser": "12.2.7",
+    "@angular/platform-browser-dynamic": "12.2.7",
+    "@angular/router": "12.2.7",
+    "@ng-bootstrap/ng-bootstrap": "5.3.1",
     "@okta/okta-angular": "1.2.2",
-    "@okta/okta-signin-widget": "^2.14.0",
+    "@okta/okta-signin-widget": "^5.11.1",
     "d3": "^5.16.0",
     "jw-angular-pagination": "^1.2.0",
-    "rxjs": "~6.4.0",
+    "patch-package": "^6.4.7",
+    "rxjs": "~7.3.0",
     "rxjs-compat": "^6.3.3",
     "topojson-client": "^3.1.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.20",
-    "@angular/cli": "~8.3.20",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
+    "@angular-devkit/build-angular": "12.2.7",
+    "@angular/cli": "12.2.7",
+    "@angular/compiler-cli": "12.2.7",
+    "@angular/language-service": "12.2.7",
     "@types/d3": "^5.16.3",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "d3-tip": "^0.9.1",
+    "install-peers": "^1.0.3",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
+    "karma": "^6.3.4",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
+    "protractor": "^7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "typescript": "~4.3.5"
   }
 }
