Hacky changes to get CIlogon logon working Current status: does get the bearer token but doesn't then use that correctly for angular login infrastructure

--- a/modules/website/beaconApp/package.json
+++ b/modules/website/beaconApp/package.json
@@ -22,7 +22,8 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@ng-bootstrap/ng-bootstrap": "^5.3.1",
-    "@okta/okta-angular": "1.2.2",
+    "@okta/okta-angular": "^4.1.0",
+    "@okta/okta-auth-js": "^5.5.0",
     "@okta/okta-signin-widget": "^2.14.0",
     "d3": "^5.16.0",
     "jw-angular-pagination": "^1.2.0",
