--- a/modules/website/beaconApp/package.json
+++ b/modules/website/beaconApp/package.json
@@ -24,9 +24,11 @@
     "@ng-bootstrap/ng-bootstrap": "5.3.1",
     "@okta/okta-angular": "1.2.2",
     "@okta/okta-signin-widget": "^5.11.1",
+    "angular-plotly.js": "^4.0.4",
     "d3": "^5.16.0",
     "jw-angular-pagination": "^1.2.0",
     "patch-package": "^6.4.7",
+    "plotly.js-dist-min": "^2.5.1",
     "rxjs": "~7.3.0",
     "rxjs-compat": "^6.3.3",
     "topojson-client": "^3.1.0",
@@ -42,6 +44,7 @@
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "@types/plotly.js-dist-min": "^2.3.0",
     "codelyzer": "^5.0.0",
     "d3-tip": "^0.9.1",
     "install-peers": "^1.0.3",
